// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GradientBar> should render component with one color 1`] = `
<View
  style={
    {
      "height": "100%",
      "left": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 0,
    }
  }
>
  <View
    style={
      {
        "height": "100%",
        "left": "0%",
        "position": "absolute",
        "top": 0,
        "width": 250,
      }
    }
  >
    <div
      className="svg"
    />
  </View>
</View>
`;

exports[`<GradientBar> should render component with three colors 1`] = `
<View
  style={
    {
      "height": "100%",
      "left": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 0,
    }
  }
>
  <View
    style={
      {
        "height": "100%",
        "left": "0%",
        "position": "absolute",
        "top": 0,
        "width": 250,
      }
    }
  >
    <div
      className="svg"
    />
  </View>
  <View
    style={
      {
        "height": "100%",
        "left": "3%",
        "position": "absolute",
        "top": 0,
        "width": 250,
      }
    }
  >
    <div
      className="svg"
    />
  </View>
  <View
    style={
      {
        "height": "100%",
        "left": "6%",
        "position": "absolute",
        "top": 0,
        "width": 250,
      }
    }
  >
    <div
      className="svg"
    />
  </View>
</View>
`;

exports[`<GradientBar> should render component with two colors 1`] = `
<View
  style={
    {
      "height": "100%",
      "left": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 0,
    }
  }
>
  <View
    style={
      {
        "height": "100%",
        "left": "0%",
        "position": "absolute",
        "top": 0,
        "width": 250,
      }
    }
  >
    <div
      className="svg"
    />
  </View>
  <View
    style={
      {
        "height": "100%",
        "left": "3%",
        "position": "absolute",
        "top": 0,
        "width": 250,
      }
    }
  >
    <div
      className="svg"
    />
  </View>
</View>
`;
